# discreterivers

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  scratchpad
cmake/Modules/: FindSDL2_image.cmake
src/: appconstraints.h  barycentric.cpp  barycentric.h  createscene.cpp  createscene.h  gfx_primitives.h  graph_tools.h  main.cpp  openglrenderer.cpp  openglrenderer.h  optional.h  planet.cpp  planet.h  test.h  topology.cpp  topology.h  typetag.h
src/altplanet/: adjacency.h  altplanet.cpp  altplanet.h  civ.cpp  civ.h  climate.h  humidity.cpp  humidity.h  incrtriangulate.hpp  irradiance.cpp  irradiance.h  jitterpoints.h  planetgeometry.h  planetshapes.h  spacehash3d.cpp  spacehash3d.h  subdivide.cpp  subivide.h  triangulate.hpp  watersystem.cpp  watersystem.h
src/altplanet/civ/: civ.cpp  civ.h
src/altplanet/climate/: climate.h  climate.h.autosave  humidity.cpp  humidity.h  irradiance.cpp  irradiance.h
src/common/: cxxopts.hpp  either.h  flags.h  freelistset.h  gfx_primitives.cpp  gfx_primitives.h  graph_tools.h  indirectionset.h  initptr.h  interpolation.hpp  intrusivelist.h  maptuple.h  mathext.h  memoize.h  optional.h  orientedangle.h  pointer.h  refcounted.h  serialize.h  statecontainer.h  stdext.h  typetag.h
src/common/collision/: projection.h  spatialindex3d.cpp  spatialindex3d.h
src/common/expr/: combineunique.h  expr.h
src/common/fixedpoint/: fixedpoint.h  profile.h
src/common/image/: image.cpp  image.h
src/common/macro/: debuglog.h  macrodebugassert.h  macroforeach.h  macrohashable.h  macroprofile.h  macroserialize.h
src/common/procedural/: boxgeometry.h  geometry.h  icosphere.h  noise3d.cpp  noise3d.h  planegeometry.h
src/common/resmanager/: manager.h  refcounted.h
src/common/shaderexpressions/: shxdebugoutput.h  shxexpr.h  shxopengl.cpp  shxopengl.h
src/common/shexpr/: shexpr.h
src/common/threads/: threadlist.h  threadpool.h  threadqueue.h
src/engine/: clientstate.cpp  clientstate.h  engine.cpp  engine.h  fpscounter.h  gfxscenemanager.cpp  gfxscenemanager.h  mousestate.h  newgameinfo.cpp  newgameinfo.h  physicssubsystem.cpp  physicssubsystem.h  phystransformcontainer.h
src/events/: events.cpp  events.h  immediatedispatcher.h  immediateevents.h  queuedevents.cpp  queuedevents.h
src/gameobject/: gameobject.h
src/graphics/: camera.h  geometry.h  gfxcommon.h  gfxresources.h  light.h  material.h  openglrenderer.cpp  openglrenderer.h  primitives.h  renderflags.h  resource.cpp  resource.h  scenenode.h  sceneobject.h  shader.cpp  shader.h  texture.h  transform.h  vertexcolormaterial.h  vertices.h
src/graphics/gui/: guielement.h  guifontrenderer.cpp  guifontrenderer.h  guinode.h  guishader.cpp  guishader.h  guitextshader.cpp  guitextshader.h  guitextvertices.h  guitransform.h
src/graphics/gui/bgelement/: bgelement.h  guishader.cpp
src/graphics/gui/imageelement/: imageelement.h
src/graphics/gui/textelement/: guitextshader.h  textelement.h
src/graphics/guirender/: guielement.h  guievent.h  guifont.cpp  guifont.h  guifontmanager.h  guifontrenderer.cpp  guifontrenderer.h  guinode.cpp  guinode.h  guistate.h  guitextobject.h  guitextvertices.h  guitransform.h
src/graphics/guirender/bgelement/: bgelement.h  guishader.cpp  guishader.h
src/graphics/guirender/imageelement/: guiimageshader.cpp  guiimageshader.h
src/graphics/guirender/sceneelement/: sceneelement.h
src/graphics/guirender/textelement/: font.h  guitextshader.cpp  guitextshader.h  monospacetextelement.h  textelement.h
src/graphics/guirender/textelement/shxtest/: textshadermat.h
src/gui/: charcreatemenu.cpp  chooseoriginmenu.cpp  createbutton.h  createtoggle.h  debugpane.cpp  gui.cpp  gui.h  guistyling.h  loadgamemenu.cpp  loadgamemenu.h  mainmenu.cpp  mainmenu.h  newgamemenu.cpp  newgamemenu.h  optionsmenu.cpp  optionsmenu.h  profilingpane.cpp  profilingpane.h  savegamemenu.cpp  savegamemenu.h  submenus.h  textbox.h  textlabel.h  worldviewer.h
src/gui/components/: createbutton.h  createtoggle.h  mapviewer.h  textbox.h  textinput.h  textlabel.h  worldviewer.h
src/mechanics/: cameracontroller.h  charactercontroller.h  controlsignals.h  defaultinputcontroller.h  inputcontroller.cpp  inputcontroller.h  mapcontroller.h  mechanicsmanager.cpp  mechanicsmanager.h  rotatorcontroller.h  thirdpersoncameracontroller.h
src/physics/: eulerphysicssim.h  extmotionstate.h  physicsmanager.cpp  physicsmanager.h  physicssimulation.cpp  physicssimulation.h  rigidbody.h  testmotionstate.h
src/physics/euler/: euler.cpp  euler.h
src/planet/: barycentric.cpp  barycentric.h  planet.cpp  planet.h  topology.cpp  topology.h  vectorgeometry.cpp  vectorgeometry.h
src/state/: actor.h  gamestate.cpp  gamestate.h  graphicsstatemanager.cpp  graphicsstatemanager.h  macrostate.h  microstate.cpp  microstate.h  microstatecreationinfo.h  scenecreationinfo.h
src/system/: async.cpp  async.h  filesystem.h  input.cpp  input.h
